--- a/TP/app/src/main/res/layout/activity_dialog_largeur.xml
+++ b/TP/app/src/main/res/layout/activity_dialog_largeur.xml
@@ -24,7 +24,7 @@
             android:textSize="20sp" />
 
         <SeekBar
-            android:id="@+id/seekBar2"
+            android:id="@+id/selecteur"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
