--- a/TP/app/src/main/res/values/colors.xml
+++ b/TP/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="bleu">#0000FF</color>
     <color name="vert">#008000</color>
     <color name="rose">#FF00FF</color>
+    <color name="background_default">#FFFFFFFF</color>
 </resources>
