--- a/TP/app/src/main/res/layout/activity_main.xml
+++ b/TP/app/src/main/res/layout/activity_main.xml
@@ -31,10 +31,12 @@
         android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/couleurs"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:tag="couleurs">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/couleur1"
@@ -51,7 +53,8 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/bleu">
+                android:background="@color/bleu"
+                android:tag="#0000FF">
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -60,7 +63,8 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/vert">
+                android:background="@color/vert"
+                android:tag="#008000">
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -69,7 +73,8 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/rose">
+                android:background="@color/rose"
+                android:tag="#FF00FF">
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -77,7 +82,8 @@
                 android:id="@+id/couleur5"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:background="@color/black">
+                android:background="@color/black"
+                android:tag="#FF000000">
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -86,7 +92,8 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:tag="#FFFFFFFF">
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
