--- a/TP/app/src/main/res/color/chip.xml
+++ b/TP/app/src/main/res/color/chip.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
+
+    <item android:state_checked="true"  android:color="#292727"  >
+
+        <shape android:shape="oval">
+        <corners android:radius="2dp" />
+        <stroke android:width="50px"/>
+        </shape>
+
+    </item>
+
+    <item android:color="#6E6868" >
+
+        <shape android:shape="oval">
+            <corners android:radius="2dp" />
+            <stroke android:width="50px"/>
+        </shape>
+    </item>
+
 </selector>
