--- a/Annexe8/app/src/main/res/drawable/effet.xml
+++ b/Annexe8/app/src/main/res/drawable/effet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
+        <shape android:shape="oval"  >
             <solid android:color="#ff0000"/>
             <corners android:radius="12dp" />
             <stroke android:width="24px" android:color="#B30000" />
@@ -9,7 +9,7 @@
     </item>
 
     <item >
-        <shape android:shape="rectangle"  >
+        <shape android:shape="oval"  >
             <corners android:radius="12dp" />
             <stroke android:width="12dp" android:color="#ff0000" />
 
