--- a/TP/app/src/main/res/values/colors.xml
+++ b/TP/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="vert">#008000</color>
     <color name="rose">#FF00FF</color>
     <color name="background_default">#FFFFFFFF</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="gold">#FFD700</color>
 </resources>
