--- a/Annexe8/app/src/main/res/drawable/effet2.xml
+++ b/Annexe8/app/src/main/res/drawable/effet2.xml
@@ -4,18 +4,26 @@
         <shape android:shape="rectangle"  >
             <solid android:color="#ff0000"/>
             <corners android:radius="12dp" />
-            <stroke android:width="24px" android:color="#B30000" />
-
+            <gradient
+                android:angle="90"
+                android:endColor="@color/black"
+                android:startColor="#ff0000"
+                android:type="linear">
+            </gradient>
         </shape>
     </item>
 
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="12dp" />
-            <stroke android:width="12dp" android:color="#ff0000" />
 
             <solid android:color="#ff0000"/>
-
+            <gradient
+                android:angle="90"
+                android:endColor="#ff0000"
+                android:startColor="@color/black"
+                android:type="linear">
+            </gradient>
         </shape>
     </item>
 
