--- a/TP/app/src/main/res/values/themes.xml
+++ b/TP/app/src/main/res/values/themes.xml
@@ -3,6 +3,13 @@
     <style name="Base.Theme.TP1" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">
+            @color/white
+        </item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="strokeColor">@color/black</item>
+
+        <item name="strokeWidth">2dp</item>
     </style>
 
     <style name="Theme.TP1" parent="Base.Theme.TP1" />
